Mon Apr  4 11:20:08 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/Process.pm:
	* bin/Process_Unix.pm:
	* bin/Process_Win32.pm:

	  Removed.  Stale versions of files now in bin/PerlACE.

Mon Apr  4 19:41:44 2005  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Added #define ACE_HAS_ICMP_SUPPORT 1.

        * tests/Reactor_Dispatch_Order_Test.cpp:
          Workaround needs to be applied to LynxOS 4.x as well.

Thu Mar 31 07:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Refcounted_Auto_Ptr.h:
          Added explicit keyword to single argument constructor now RMCast is
          updated

Thu Mar 31 09:58:48 2005  Boris Kolpackov  <boris@kolpackov.net>

        * protocols/ace/RMCast/Acknowledge.cpp:
        * protocols/ace/RMCast/Link.cpp:
        * protocols/ace/RMCast/Retransmit.cpp:

        Updated to work with explicit ctor in ACE_Refcounted_Auto_Ptr.

Tue Mar 29 18:44:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Refcounted_Auto_Ptr.h:
          Removed the explicit again, it seems to give a problem in RMCast, will
          check this later

Tue Mar 29 15:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SOCK_Dgram.{h,cpp}:
          Changed the ACE_SOCK_Dgram::set_nic() to have a return value
          so that the caller can check whether things succeeded or not

Tue Mar 29 15:05:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Refcounted_Auto_Ptr.h:
          Added explicit keyword to single argument constructor

Tue Mar 29 07:58:40 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Support the new postbuild keyword.

Tue Mar 29 06:21:34 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Support the modification to the MPC xerces base project that set
          the xerceslib template variable to allow for the many different